@@ -1,6 +1,7 @@
 Revision history for Path-Resolver
 
 {{$NEXT}}
+          add has_resolver_for and add_resolver_for methods
 
 3.100451  2010-09-14 18:26:27 America/New_York
           use -excludes rather than excludes in role application
